# parallel_augustus

./: .gitignore  README.md  pyproject.toml  setup.py
parallel_augustus/: checks.py  cli.py  pipeline.py
